# CreatorDNA

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.cursor/rules/: api-workers.mdc  extension.mdc  project-core.mdc  tasks.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_analysis_tasks_and_style_fields.py  003_creator_analysis_tasks.py  004_export_tasks.py
apps/api/: config.py  logging_config.py  main.py
apps/extension/: README.md  package.json  wxt.config.ts
docs/: README.md  STATUS.md
docs/ai-pipeline/: pipeline.md
docs/api/: api.md  schemas.md
docs/architecture/: data-flow.md  module-ownership.md  monorepo-structure.md  overview.md
docs/compliance/: compliance.md
docs/development/: agent-playbook.md  conventions.md  e2e-checklist.md  getting-started.md  testing-strategy.md
docs/operations/: deployment.md  observability.md  runbooks.md  secrets.md  security.md
docs/product/: launch-criteria.md  vision-and-outcomes.md
docs/tasks/: BACKLOG.md  PRODUCTION_GATES.md  README.md
infra/: Dockerfile.api  Dockerfile.beat  Dockerfile.worker  docker-compose.staging.yml  docker-compose.yml
tests/: conftest.py  test_aggregation.py  test_api_upload.py  test_auth.py  test_creator_analysis.py  test_douyin_urls.py  test_export.py  test_ffmpeg_frames.py  test_health.py  test_media_cleanup.py  test_production.py  test_rate_limit.py  test_structure_parse.py  test_vision_parse.py
workers/: celery_app.py
workers/services/: aggregation.py  asr.py  ffmpeg.py  llm.py  (+6 more)
(+64 files in other folders)
