[project]
name = "creator-dna"
version = "0.1.0"
description = "CreatorDNA API and workers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "boto3>=1.35.0",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "openai>=1.57.0",
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["apps", "workers"]
